Mejora submit() en TextBoxPage: scroll y espera explícita antes de clic para evitar ElementClickInterceptedException. Comentarios agregados.